# http-server-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
