[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.9"
anyhow = "1.0.89"
dotenv = "0.15.0"
curl = "0.4.47"

[[bin]]
name="http-server"
path="src/main.rs"
